tests/purs/failing/ClassHeadNoVTA1.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA1.purs:8:10 - 8:19 (line 8, column 10 - line 8, column 19)

  No type class instance was found for
  [33m                [0m
  [33m  Main.Single t0[0m
  [33m                [0m
  The instance head contains unknown type variables. Consider using visible type application(s):
  [33m                              [0m
  [33m  useSingle @tyNotAppearInBody[0m
  [33m                              [0m

while checking that expression [33museSingle[0m
  has type [33mInt[0m
in value declaration [33msingle[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

